# barogram

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  barogram-body.html  barogram-scripts.html  barogram-style.css  barogram.example.local.toml  barogram.example.toml  barogram.py  config.py  dashboard.py  db.py  fmt.py  pyproject.toml  score.py  sync.py  tune-monthly.sh
docs/: 001_persistence.md  002_climatological_mean.md  003_weighted_climatological_mean.md  004_climo_deviation.md  005_pressure_tendency.md  006_diurnal_curve.md  007_airmass_diurnal.md  008_analog.md  009_surface_signs.md  010_synoptic_state_machine.md  011_airmass_precip.md  012_bogo.md  100_barogram_ensemble.md  202_external_corrected.md  README.md  database.md  tune.md
migrations/: 001_baseline.sql  001_init.sql  002_models_type.sql  003_climatological_mean.sql  004_members.sql  005_model003_rows.sql  006_model004_rows.sql  007_humidity_to_dewpoint.sql  008_weights.sql  009_model005_rows.sql  010_model006_rows.sql  011_model100_rows.sql  012_airmass_diurnal.sql  013_airmass_diurnal_v2.sql  014_climo_deviation_v2.sql  015_external_models.sql  016_analog.sql  017_airmass_diurnal_v3.sql  018_surface_signs.sql  019_performance_indexes.sql  020_sector_weights.sql  021_synoptic_state_machine.sql  022_synoptic_state_machine_ptend.sql  023_remove_wind_speed.sql  024_airmass_precip.sql  024_bogo.sql  025_bogo_members.sql  026_airmass_precip_v2.sql  027_brier_rescore.sql  028_brier_rescore_climo.sql  029_brier_rescore_base.sql  030_external_corrected.sql  031_rescore_persistence_precip.sql  (+1 more)
(+38 files in other folders)
