[project]
name = "barogram"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
barogram = "barogram:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "models/*.py",
    "migrations/*.sql",
]
